broken css fixed

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ button{
 
 .card{
     background: rgb(245, 241, 241);
-    width:350px;
+    min-width:350px;
     margin:10px;
     min-height:350px;
     padding-bottom:20px;
@@ -34,7 +34,7 @@ button{
 }
  /* globel message */
 .global-msg{
-    background-color: rgb(62, 62, 233);
+    background-color: rgb(79, 152, 201);
     color:white;
     padding:10px 0;
     /* margin:10px; */
@@ -46,7 +46,8 @@ button{
 }
 h3{
     text-transform: uppercase;
-    color:darkmagenta;
+    color:rgb(80, 130, 187);
+    text-shadow: -3px 2px 8px rgb(197, 50, 141);
 }
 
 .global-msg .container{
@@ -78,7 +79,8 @@ h3{
 }
 .menu ul li{
     margin-left:16px;
-    cursor:pointer;       
+    cursor:pointer;
+    color:rgb(89, 142, 223);      
 }
 .menu ul li:hover{
     color:blueviolet
@@ -89,7 +91,7 @@ h3{
 
 .logo{
     font-family: 'Neonderthaw', cursive;
-    color:crimson;
+    color:rgb(20, 157, 220);
 }
 
 .hero{
@@ -127,7 +129,10 @@ h3{
     margin-top: 70px;
 }
 
-
+h2{
+    color:rgb(209, 114, 185);
+    text-shadow: 3px 3px 8px #976082;
+}
 
 .latest-content{
     display:flex;
@@ -148,7 +153,7 @@ h3{
     height:200px;
     border:1px solid rgba(190, 187, 187, 0.589);
     border-radius:5px;
-    box-shadow: -10px 10px 15px 5px rgba(110, 100, 108, 0.5)
+    box-shadow: -10px 10px 15px 5px rgba(101, 142, 219, 0.5)
 }
 .info {
     margin:0 20px;
@@ -236,6 +241,7 @@ h3{
     .latest-content {
         display:flex;
         flex-direction:column ;
+        
     }
     .latest {
         width:100%;
